[package]
name = "axum-pgsql-htmx"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "net"] }

axum = { version = "0.7", features = ["macros", "form"] }
tower = "0.4"
tower-sessions = { version = "0.9", features = ["axum-core", "moka-store", "postgres-store", "deletion-task"], default-features = false }

sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid"], default-features = false }
uuid = { version = "1.7", features = ["v7"] }

dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

color-eyre = "0.6"
thiserror = "1.0"

maud = { version = "0.26", features = ["axum"] }

serde = { version = "1.0", features = ["derive"] }